<resources>
    <string name="app_name">Crypto Tracker</string>
    <string name="search">Search</string>

    <string name="price_usd">Price USD: </string>
    <string name="price_btc">Price BTC: </string>
    <string name="day_volume_usd">"24h USD vol: "</string>

    <string name="price_usd_n">Price USD: %1s</string>
    <string name="price_btc_n">Price BTC: %1s</string>
    <string name="day_volume_usd_n">24h USD vol: %1s</string>

    <string name="market_cap_usd_n">Market cap: %1s</string>
    <string name="available_supply_n">Available supply: %1s</string>
    <string name="max_supply_n">Max supply: %1s</string>

    <string name="market_cap_usd">Market cap:</string>
    <string name="available_supply">Available supply: </string>
    <string name="max_supply">Max supply: </string>


    <string name="one_hour_title">"1h: "</string>
    <string name="one_day_title">"1d: "</string>
    <string name="one_week_title">"1w: "</string>

    <string name="sort_by_rank">Sort by rank</string>
    <string name="sort_by_volume">Sort by volume</string>
    <string name="sort_by_cost">Sort by cost</string>
    <string name="sort_by_rise">Sort by rise</string>
    <string name="sort_by_falling_down">Sort by falling down</string>

    <string name="crypto_currency_icon">Crypto Currency icon</string>
    <string name="options_title">Options</string>
    <string name="sort_title">"Sort by: "</string>

    <string-array name="sort_types">
        <item>by rank</item>
        <item>by volume</item>
        <item>by cost</item>
        <item>by hour rise</item>
        <item>by hour falling down</item>
        <item>by day rise</item>
        <item>by day falling down</item>
        <item>by week rise</item>
        <item>by week falling down</item>
    </string-array>
</resources>
