<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/list_item_ccurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cur_name"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/cur_icon"
            style="@style/TextIconStyle"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/crypto_currency_icon"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cur_cost"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cur_name"
            tools:text="USD price: 11234.84" />

        <TextView
            android:id="@+id/btc_cost"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cur_cost"
            tools:text="BTC price: 0.010201200" />

        <TextView
            android:id="@+id/usd_day_vol"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btc_cost"
            tools:text="24h USD vol: 123451354125" />

        <TextView
            android:id="@+id/one_hour"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/one_hour_title"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cur_name" />

        <TextView
            android:id="@+id/one_day"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/one_day_title"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/one_hour" />

        <TextView
            android:id="@+id/one_week"
            style="@style/TitleParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/one_week_title"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/one_day" />

        <TextView
            android:id="@+id/hour_change_volume"
            style="@style/ValueParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/one_hour"
            app:layout_constraintTop_toTopOf="@+id/cur_cost" />

        <TextView
            android:id="@+id/day_change_volume"
            style="@style/ValueParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/one_day"
            app:layout_constraintTop_toBottomOf="@+id/hour_change_volume" />

        <TextView
            android:id="@+id/week_change_volume"
            style="@style/ValueParamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/one_week"
            app:layout_constraintTop_toBottomOf="@+id/day_change_volume" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.39" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.79" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>