<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cur_name"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            tools:text="TextView" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cur_icon"
                    style="@style/TextIconStyle"
                    android:layout_width="119dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/crypto_currency_icon"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@android:color/background_light" />

                <TextView
                    android:id="@+id/cur_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/btc_cost"
                    app:layout_constraintStart_toEndOf="@+id/cur_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/btc_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/market_cap"
                    app:layout_constraintStart_toEndOf="@+id/cur_icon"
                    app:layout_constraintTop_toBottomOf="@+id/cur_cost"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/market_cap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cur_icon"
                    app:layout_constraintTop_toBottomOf="@+id/btc_cost"
                    tools:text="TextView" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="173dp"
            android:layout_marginBottom="8dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/day_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="TextView" />


                <TextView
                    android:id="@+id/available_supply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="@+id/day_vol"
                    app:layout_constraintTop_toBottomOf="@+id/day_vol"
                    tools:text="TextView" />


                <TextView
                    android:id="@+id/hour_change_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/one_hour_title"
                    app:layout_constraintEnd_toStartOf="@+id/day_change_title"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/available_supply" />

                <TextView
                    android:id="@+id/hour_change_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    app:layout_constraintStart_toStartOf="@+id/hour_change_tittle"
                    app:layout_constraintTop_toBottomOf="@+id/hour_change_tittle"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/day_change_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/one_day_title"
                    app:layout_constraintEnd_toStartOf="@+id/week_change_title"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/hour_change_tittle"
                    app:layout_constraintTop_toBottomOf="@+id/available_supply" />

                <TextView
                    android:id="@+id/day_change_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/day_change_title"
                    app:layout_constraintTop_toBottomOf="@+id/day_change_title"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/week_change_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/one_week_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/day_change_title"
                    app:layout_constraintTop_toBottomOf="@+id/available_supply" />


                <TextView
                    android:id="@+id/week_change_vol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/week_change_title"
                    app:layout_constraintTop_toBottomOf="@+id/week_change_title"
                    tools:text="TextView" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="24dp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/markets_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="40dp" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>